--- a/html-css/module-3/style.css
+++ b/html-css/module-3/style.css
@@ -13,7 +13,7 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: "Myriad Pro Regular", sans-serif;
+    font-family: PlayfairDisplay Regular, sans-serif;
     color: #626262;
     font-size: 14px;
     line-height: 21px;
