--- a/html-css/module-7/css/styles.css
+++ b/html-css/module-7/css/styles.css
@@ -7,8 +7,39 @@ html {
   *::after {
     box-sizing: inherit;
   }
+
+  @font-face {
+    font-family: 'DancingScript-Regular';
+    src: url(../fonts/DancingScript-Regular.woff);
+    font-weight: normal;
+    font-style: normal;
+  }
   
   
+ 
+  @font-face {
+    font-family: 'montserrat';
+    src: url(../fonts/montserrat-v12-latin-regular.woff);
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+
+  @font-face {
+    font-family: 'montserrat';
+    src: url(../fonts/montserrat-v12-latin-700.woff);
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'roboto';
+    src: url(../fonts/roboto-slab-v7-latin-regular.woff);
+    font-weight: normal;
+    font-style: normal;
+  }
+
+ 
   img {
     display: block;
     max-width: 100%;
@@ -16,13 +47,13 @@ html {
   }
   
   .page-nav-container {
-    width: 1200px;
+    width: 940px;
     margin: 0 auto;
   }
   
   .page-header {
     background-color: #ffffff;
-    margin-bottom: 116px;
+    margin-bottom: 70px;
   }
   
   .page-nav-container {
@@ -34,365 +65,224 @@ html {
   
   .site-logo {
     animation: logo-appear 1s linear;
-    color: #95e1d3;
-    font-family: 'Monsterrat', sans-serif;
+    color: #fed136;
+    font-family: 'DancingScript-Regular';
     font-size: 30px;
-    line-height: 30px;
-    font-weight: 700;
+    line-height: 41px;
+    text-decoration: none;
   }
 
-  @keyframes logo-appear {
-    0% {
-      transform: translateY(-200px);
-      opacity: 0;
-    }
-  
-    50% {
-      transform: translateY(0);
-      opacity: 1;
-      transform: rotate(0);
-    }
-  
-    100% {
-      transform: rotate(360deg);
-    }
-}
 
 .site-navigation {
     display: flex;
     justify-content: space-between;
-    width: 492px;
+    width: 485px;
     padding: 0;
     font-size: 14px;
     line-height: 14px;
     list-style: none;
     text-transform: uppercase;
-    font-family: 'Monsterrat', sans-serif;
-    font-weight: 400; 
+    font-family: 'montserrat', sans-serif;
+    font-weight: normal;
+    
   }
 
   .site-item a:hover,
 .site-item a:focus {
-    color:#f38181;
+    color:#fed136;
 }
 
 .site-item a {
     text-decoration: none;
     transition: color 0.2s linear;
-    color: #95e1d3;
+    color: #222222;
 }
 
 .capture-1 {
     text-align: center;
-    font-family: 'Kaushan Script', cursive;
-    font-size: 24px;
-    line-height: 24px;
-    color: #333333;
-    margin-top: 0px;
+    font-family: 'montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 75x;
+    color: #222222;
+    margin: 0 auto 14px;
+    text-transform: uppercase;
+  
 }
 
 .capture-2 {
     text-align: center;
-    font-family: 'Monsterrat', sans-serif;
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 30px;
+    font-family: 'DancingScript-Regular', sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
     color: #333333;
-    text-transform: uppercase;
-    margin-top: 23px;
+    margin: 9px 0;
 }
 
-.icons:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+.item-block {
+  width: 940px;
+  margin: 0 auto;
+
 }
 
-
+.circle-icon {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  border-style: solid;
+  border-width: 3px;
+  border-color: rgb(254, 209, 54);
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+}
 .icon-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 1180px;
-    padding: 0;
-    margin: 66px auto;
-
-}
-
-.icon-list li {
-    width: 382px;
-    list-style: none;
-    display: flex;
-   
+  
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin-top: 38px;
+  padding: 0;
+  list-style: none;
+  
 }
 
 .icon-list-capture {
-  position: absolute;
-  margin-left: 84px;
-  font-family: 'Montserra', sans-serif;
-  font-weight: 400px;
+  display: block;
+  font-family: 'montserrat';
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  line-height: 28px;
+  color: #222222;
+  margin: 10px 0;
+  
+}
+
+
+.text-block {
+  color: #777777;
+  font-family: 'roboto', sans-serif;
+  font-weight: normal;
   font-size: 14px;
-  line-height: 14px;
-  color: #333333;
-  text-transform: uppercase;
-}
+  line-height: 20px;
+  text-align: center;
+  margin: 10px 0;
 
-
-.icon-alarm {
-  background: url(../img/alarm.png) left top no-repeat;
-}
-
-.icon-line-graphe {
-  background: url(../img/line-graphe.png) left top no-repeat;
-}
-
-.icon-computer {
-  background: url(../img/computer.png) left top no-repeat;
-}
-
-.icon-book2 {
-  background: url(../img/book2.png) left top no-repeat;
-}
-
-.icon-home {
-  background: url(../img/home.png) left top no-repeat;
-}
-
-.icon-image {
-  background: url(../img/image.png) left top no-repeat;
 }
 
 .features-list-item {
-  float: left;
-  width: 380px;
-  cursor: pointer;
+  width: 290px;
+  padding-top: 26px;
 }
 
-.capture-block {
-    display: inline-block;
-    font-family: 'Monsterrat', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 14px;
-    color: #333333;
-    text-transform: uppercase;
-}
-
-.text-block {
-    margin-left: 84px;
-    margin-top: 24px;
-    margin-bottom: 100px;
-    display: block;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 24px;
-    color: #999999;
-}
-
-.text-capture-block {
-    display: flex;
-
-}
-
-.main-text {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-  width: 980px;
+.capture-12 {
+  color: #ffffff;
   text-align: center;
-  color: #999999;
-  margin-top: 90px;
-  margin: 55px auto 74px;
-}
-
-.card-boys {
-  position: relative;
-  padding: 0px;
-  list-style: none;
-  width: 380px;
-  height: 470px;
-  margin: 15px;
-  float: left;
-}
-
-.card-boys li:last-child {
-  margin-right: 0px;
-}
-
-.caption-line {
+  font-family: 'montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 75px;
+  
+  text-transform: uppercase;
   display: block;
-  background: #f38181;
-  width: 60px;
-  height: 3px;
-  left: 640px;
-  margin: 10px auto;
 }
-
-
-.team {
-  margin: 0 auto;
-  display: flex;
-  list-style: none;
-  position: relative;
-  justify-content: space-between;
-  width: 1200px;
-}
-
-.card-boys{
-  width: 370px;
-  height: 480px;
-  position: relative;  
-
-}
-
-.card-boys-foto {
-  z-index: 1;
-  position: absolute;
-  width: 380px;
-  height: 470px;
-}
-
-.man-name {
-  position: absolute;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 14;
-  line-height: 14px;
-  color: #333333;
-  text-align: center;
-  margin: 0 auto;
-  top: 500px;
-}
-
-.profession {
-  position: absolute;
-  font-family: 'Roboto Light Italic', sans-serif;
-  font-weight: 300;
-  font-size: 15;
-  line-height: 24px;
-  color: #999999;
-  text-align: center;
-  margin: 0 auto;
-  top: 528px;
-
-}
-.button-list {
-  width: 56px;
-  height: 56px;
-  margin: 0px;
-  padding: 0px;
-  border-right: 1px solid #f9bd87;
-  background: #fce38a;
-}
-
-.many-buttons {
-  position: absolute;
-  top: 210px;
-  left: 79px;
-  width: 236px;
-  height: 56px;
-  z-index: 3;
-  background: #fce38a;
-}
-
-.button-list:hover {
-  cursor: pointer;
-  background-color: #95e1d3;
-}
-
-.button-facebook {
-  background: url(../img/facebook.png) center center no-repeat;
-}
-
-.button-twitter {
-  background: url(../img/twitter.png) center center no-repeat;
-}
-
-.button-pinterest {
-  background: url(../img/pinterest.png) center center no-repeat;
-}
-
-.button-instagram {
-  background: url(../img/instagram.png) center center no-repeat;
-}
-
-.card-fon {
-  opacity: 0.549;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 370px;
-  height: 480px;
-  z-index: 1;
-}
-
-
-.card-fon,
-.card-fon:hover,
-.card-fon:focus {
-    cursor: pointer;
-    background-color: #95e1d3;
-}
-
-.card-gradient {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 380px;
-  height: 470px;
-  background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
-  z-index: 2;
-  opacity: 0.65;
-}
-
-.card-gradient ,
-.card-gradient:hover,
-.card-gradient:focus {
-    background-image: -moz-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
-    background-image: -webkit-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
-    background-image: -ms-linear-gradient( 90deg, rgb(252,227,138) 0%, rgb(243,129,129) 100%);
-}
-
-footer {
-  display: flex;
-  justify-content: space-between;
-  /*width: 100%;*/
-  height: 62px;
-  border-top: 1px solid #e5e5e5;
-  margin: 86px auto;
- 
-
-}
-
-.footer-fon {
-  font-family: 'Montserrat';
-  font-weight: 400;
+.text-box {
+  width: 455px;
+  height: 54px;
+  display: block;
+  margin-bottom: 30px;
+  font-family: 'montserrat';
+  font-weight: bold;
   font-size: 14px;
   line-height: 14px;
-  text-align: center;
-
-  /*left: 359.265px;
-  top: 1626.7px;
-  z-index: 10;*/
+  color: #bbbbbb;
+  text-transform: uppercase;
+  text-indent: 20px;
+  
 }
 
-.footer-fon a {
-  color: #f38181;
-  text-decoration: none;
+/*.text-box:nth-last-child {
+  margin-bottom: 0;
+}*/
+
+
+.textarea-box {
+  width: 455px;
+  height: 220px;
+  display: block;
+  margin-bottom: 30px;
+  font-family: 'montserrat';
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 14px;
+  color: #bbbbbb;
+  text-transform: uppercase;
+  padding: 20px;
+  resize: none;
+  
+}
+
+.table {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 940px;
+}
+footer {
+  width: 100%;
+  min-width: 940px;
+  padding: 100px 0;
+  margin-top: 100px;
+  background: #222 url(../img/map.png) center top no-repeat;
+
+}
+
+.forms {
+  width: 940px;
+  margin: 0 auto;
+  
+
 }
 
 .rectangle {
-  background-color: #95e1d3;
-  font-family: 'Montserrat';
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 14px; 
+  display: block;
+  background-color: #fed136;
+  font-family: 'montserrat';
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px; 
   color: #ffffff;
   text-transform: uppercase;
-  width: 152px;
-  height: 42px;
-
+  width: 244px;
+  height: 68px;
+margin: 0 auto;
+border: 0px;
+border-radius: 2px;
 }
 
+input {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
 
+textarea {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+textarea:focus:invalid,
+input:focus:invalid {
+  outline: 1px solid red; 
+ }
+
+ textarea:focus:valid,
+ input:focus:valid {
+  outline: 1px solid green;
+ }
+
+ input::placeholder {
+color:#bbb;
+ }
 
