--- a/html-css/module-9/css/styles.css
+++ b/html-css/module-9/css/styles.css
@@ -31,16 +31,32 @@ html {
   
   .page-header {
       background: url(../img/fon.jpg) center top no-repeat;
+      background-size: cover;
       min-height: 540px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
   }
   
+ 
   .page-nav-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    flex: initial;
     
   }
+
+  .slider-picture {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex: auto;
+
+  } 
   
   .site-logo {
     display: block;
@@ -53,7 +69,7 @@ html {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    margin: 0;
+    margin-top: 10px;
     padding: 0;
 
   }
@@ -61,15 +77,11 @@ html {
     color: #fff !important;
   }
 
-.logo {  
-  margin-top: 10px;
-}
-
 .logo-container {
   order: 2;
 }
 
-.navigation-container {
+.site-navigation {
   order: 1;
 }
 
@@ -139,21 +151,12 @@ html {
   }
 
   .slider-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     align-items:  center;
     flex-direction: column;
     width: 300px;
     font-size: 24px;
     line-height: 24px;
-  
-    /*position: absolute;
-    top: 316px;
-    left: 488px;
-    */
     text-align: center;
 
   }
@@ -191,7 +194,12 @@ html {
     color: #333333;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 50px 0;
+  }
+
+  .section-content {
+    width: 80%;
+    max-width: 80% !important;
   }
 
   .icon-list {
@@ -286,10 +294,6 @@ html {
   padding-top: 38px;
 }
 
-.section-content {
-  margin-top: 70px;
-
-}
 .button-3 {
   display: block;
     width: 190px;
